services/tools/inkvoice/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: inkvoice
  namespace: inkvoice
  annotations:
    external-dns.alpha.kubernetes.io/hostname: invoice.<path:argocd:common-secrets#homelab-domain>
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - "invoice.<path:argocd:common-secrets#homelab-domain>"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: inkvoice
          port: 3000
